# IEEELettersSign

./: CMakeLists.txt  README.md  sign_letters.ai
IEEELettersSign/: README.md  project.properties
IEEELettersSign/code/: led_strip.cpp  led_strip.h
IEEELettersSign/src/: IEEELettersSign.ino
PhotonCode/: photonCode.ino
code/: Arduino.h  CMakeLists.txt  led_strip.cpp  led_strip.h
sign_generator/: generate.js  index.html  main.css  svg-crowbar.js  utils.js
